--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+#spring.profiles.active=DB
+spring.datasource.url=jdbc:oracle:thin:@//tosfeb3fc:1521/TSTA
+spring.datasource.username=tu0003a
+spring.datasource.password=tu0003a
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
