--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8080
+server.servlet.context-path=/api
+
 # OracleDB connection settings
 spring.datasource.url=jdbc:oracle:thin:@//tosfeb3fc:1521/TSTA
 spring.datasource.username=tu0003a
