--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>be.abis</groupId>
     <artifactId>sandwich</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>sandwichskeleton</name>
-    <description>sandwichskeleton</description>
+    <name>sandwichapi</name>
+    <description>sandwichapi</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -44,10 +44,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
